# cabal-custom-setup

./: README.md  cabal.project
A/: A.cabal  Test.hs
B/: B.cabal  Setup.hs
