cabal-version:       >=1.10

name:                B
version:             0.1.0.0
build-type:          Custom

custom-setup
      setup-depends: base >= 4.9 && < 5,
                     Cabal >= 1.24,
                     A

executable B
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
